Add font candidates

--- a/style.css
+++ b/style.css
@@ -37,3 +37,7 @@ html, body {
   display: inline-block;
   vertical-align: middle;
 }
+
+h1, h2, h3, h4, h5, h6, .navbar-brand {
+  font-family: var(--brand-font);
+}
