--- a/style.css
+++ b/style.css
@@ -38,6 +38,14 @@ html, body {
   vertical-align: middle;
 }
 
-h1, h2, h3, h4, h5, h6, .navbar-brand, .h1, .h2, .h3, .h4, .h5, .h6, lead {
-  font-family: var(--brand-font);
+h1, h2, h3, h4, h5, h6, .navbar-brand, .h1, .h2, .h3, .h4, .h5, .h6, .lead {
+  font-family: neue-haas-grotesk-display;
+}
+
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, .lead {
+  letter-spacing: 0.02em;
+}
+
+.display-1, .display-2, .display-3, .display-4 {
+  font-weight: 500;
 }
